feat: Update checkout and member pages with improved UI and functionality
- Refactored header section in checkoutPage.html for better readability and structure.
- Added placeholder text for phone number in memberCenter.js to handle cases where the phone number is not provided.
- Updated resetPassword.js to change the API endpoint for password reset.
- Enhanced addcart.js to handle unauthorized access and improve badge rendering logic.
- Modified cartPage.js to check login status and handle cart retrieval more gracefully.
- Improved productDetailPage.js to fetch related products dynamically and render images asynchronously.
- Added CSS styles in productDetailPage.html for better layout of related products.
- Updated resetPassword.html with improved spacing and button styles for better user experience.
- Added new product images for Calcium, Hyaluronic Acid Capsules, and Vitamin D3.